--- a/src/components/ErrorContainer/ErrorContainer.module.css
+++ b/src/components/ErrorContainer/ErrorContainer.module.css
@@ -1,8 +1,7 @@
 .errorContainer {
-  margin: 12px 0 0 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  vertical-align: center;
   color: red;
+  margin-top: 1rem !important;
 }
