--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
 
 .base-component {
   display: flex;
-  padding: 8px 100px 0 100px;
+  width: 640px;
+  padding: 8px 80px 0 80px;
   align-items: center;
   flex-direction: column;
   border: solid white 1px;
