Add profile picture

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,18 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 
+.accordion-item {
+    color: white !important;
+    background-color: #343a40 !important;
+    border: var(--bs-accordion-border-width) solid #343a40 !important;
+}
+.accordion-button {
+    background-color: #343a40 !important;
+    color: white !important;
+    width: 100% !important;
+}
+
+.accordion-button:not(.collapsed)::after {
+    background-image: var(--bs-accordion-btn-icon) !important;
+}
+
